--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -2,7 +2,7 @@
     display: flex;
     background-color: white;
     box-shadow: -5px 7px 7px black;
-    margin: 50px;
+    margin: 20px;
     width: 250px;
     height: 200px;
     display: grid;
