--- a/src/components/CardsContainer.css
+++ b/src/components/CardsContainer.css
@@ -1,21 +1,23 @@
+/* Overall wrapper for this section*/
+.one-board-wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+/* Box for name and owner of board */
 .board-header {
     display: flex;
     background-color: white;
     flex-direction: column;
     align-content: center;
     padding: 10px;
+    margin-top: 35px;
     margin-left: 150px;
     margin-right: 150px;
-    margin-bottom: 15px;
+    margin-bottom: 35px;
     border-radius: 25px;
-    min-width: 250px;
-}
-
-.new-card-container {
-    background-color: white;
-    margin-left: 30px; 
-    margin-right: 30px; 
-    border-radius: 10px; 
+    min-width: 500px;
 }
 
 .board-title {
@@ -27,4 +29,20 @@
     display: flex;
     font-size: medium;
     justify-content: center;
+}
+
+/* Box for new card submission */
+.new-card-submission-container {
+    background-color: white;
+    margin-left: 30px; 
+    margin-right: 30px; 
+    border-radius: 10px; 
+}
+
+/* Box for cards themselves */
+.cards-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
